<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonCausticInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/caustic_name"
            android:onClick="onClickOpenCausticInfo"
            app:srcCompat="@drawable/caustic" />

        <ImageButton
            android:id="@+id/imageButtonBloodhoundInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/bloodhound_name"
            app:srcCompat="@drawable/bloodhound" />

        <ImageButton
            android:id="@+id/imageButtonBangaloreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/bangalore_name"
            app:srcCompat="@drawable/bangalore" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonPathfinderInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pathfinder_name"
            android:layout_weight="1"
            app:srcCompat="@drawable/pathfinder" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/octane_name"
            android:layout_weight="1"
            app:srcCompat="@drawable/octane" />

        <ImageButton
            android:id="@+id/imageButtonMirageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mirage_name"
            android:layout_weight="1"
            app:srcCompat="@drawable/mirage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonLifelineInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lifeline_name"
            android:layout_weight="1"
            app:srcCompat="@drawable/lifeline" />

        <ImageButton
            android:id="@+id/imageButtonGibraltarInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gibraltar_name"
            android:layout_weight="1"
            app:srcCompat="@drawable/gibraltar" />

        <ImageButton
            android:id="@+id/imageButtonCryptoInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crypto_name"
            android:layout_weight="1"
            app:srcCompat="@drawable/crypto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonWraithInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wraith_name"
            android:layout_weight="1"
            app:srcCompat="@drawable/wraith" />

        <ImageButton
            android:id="@+id/imageButtonWattsonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wattson_name"
            android:layout_weight="1"
            app:srcCompat="@drawable/wattson" />

        <ImageButton
            android:id="@+id/imageButtonWeaponsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/nextpage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonHelpInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/about_program_name"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

        <ImageButton
            android:id="@+id/imageButtonEventsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/events_name"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/imageButtonLifeHacksInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weapons_name"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />
    </LinearLayout>

</LinearLayout>